dist_man1_MANS=

if BUILD_BROCOIND
  dist_man1_MANS+=brocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=brocoin-qt.1
endif

if BUILD_BROCOIN_CLI
  dist_man1_MANS+=brocoin-cli.1
endif

if BUILD_BROCOIN_TX
  dist_man1_MANS+=brocoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BROCOIN_WALLET
  dist_man1_MANS+=brocoin-wallet.1
endif
endif
